# VoiceChanger

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/westd/ndkapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/westd/ndkapplication/aidl/: Book.aidl  IBookManager.aidl
app/src/main/cpp/: com_example_westd_ndkapplication_FileUtils.h  native-lib.c  qq_voice.cpp
app/src/main/java/com/example/westd/ndkapplication/: FileUtils.java  FlowTabLayout.java  GroupDealPropertiesAdapter.java  Jni加载so  MainActivity.java  MyUtils.java  SecondActivity.java  TestFlowLayoutActivity.java
app/src/main/java/com/example/westd/ndkapplication/aidl/: Book.java
app/src/main/java/com/example/westd/ndkapplication/anfixdemo/: AndfixMainActivity.java  Caculator.java
app/src/main/java/com/example/westd/ndkapplication/changeVoice/: ChangeVoiceActivity.java  MainActivity.java  VoiceUtils.java
app/src/main/java/com/example/westd/ndkapplication/myview/: HorizontalScrollViewEx.java  MySingleView.java  MyView.java  MyViewMainActivity.java
app/src/main/res/layout/: activity_andfix_main.xml  activity_change_voice.xml  activity_main.xml  activity_my_view_main.xml  activity_secend_simple.xml  activity_second.xml  activity_test_flow_layout.xml  lv_property_item.xml
app/src/test/java/com/example/westd/ndkapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
